--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -38,7 +38,8 @@
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/@circlon/angular-tree-component/src/lib/angular-tree-component.css",
               "node_modules/leaflet.markercluster/dist/MarkerCluster.css",
-              "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css"
+              "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css",
+              "node_modules/@geoman-io/leaflet-geoman-free/dist/leaflet-geoman.css"
             ],
             "scripts": [
               "node_modules/popper.js/dist/umd/popper.min.js",
@@ -129,7 +130,8 @@
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/leaflet/dist/leaflet.js",
               "node_modules/leaflet-draw/dist/leaflet.draw.js",
-              "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"
+              "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js",
+              "node_modules/@geoman-io/leaflet-geoman-free/dist/leaflet-geoman.min.js"
             ],
             "styles": [
               "node_modules/primeng/resources/themes/nova/theme.css",
