--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ajsf/material": "^0.6.0-beta.1",
     "@angular-devkit/build-angular": "^12.2.13",
     "@angular-devkit/core": "^12.2.13",
     "@angular/animations": "12.2.13",
@@ -37,6 +38,7 @@
     "@angular/platform-browser-dynamic": "12.2.13",
     "@angular/router": "12.2.13",
     "@circlon/angular-tree-component": "^11.0.2",
+    "@geoman-io/leaflet-geoman-free": "^2.11.4",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@ng-select/ng-select": "^7.4.0",
     "@ngx-translate/core": "^14.0.0",
